--- a/code/SiteGenerator.Tests/TestData/OldSiteOutput/notes/fuses/index.html
+++ b/code/SiteGenerator.Tests/TestData/OldSiteOutput/notes/fuses/index.html
@@ -35,11 +35,11 @@
 
 <meta property="og:title" content="Fuses • Asbjørn Brandt's Notes">
 <meta property="og:type" content="article">
-<meta property="og:url" content="https://tbd.netlify.app/notes/fuses/">
+<meta property="og:url" content="https://asbjornbrandt.com/notes/fuses/">
 <meta property="og:image" content="/assets/chart.svg">
 <meta property="og:description" content="A small site mostly to play with static sites and share some thoughts and rough writing on tech, data and programming.">
 
-<link rel="canonical" href="https://tbd.netlify.app/notes/fuses/">
+<link rel="canonical" href="https://asbjornbrandt.com/notes/fuses/">
 
 <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter&display=swap">
