--- a/code/SiteGenerator.Tests/TestData/OldSiteOutput/now/index.html
+++ b/code/SiteGenerator.Tests/TestData/OldSiteOutput/now/index.html
@@ -29,11 +29,11 @@
 
 <meta property="og:title" content="Asbjørn Brandt">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://tbd.netlify.app/now/">
+<meta property="og:url" content="https://asbjornbrandt.com/now/">
 <meta property="og:image" content="/assets/chart.svg">
 <meta property="og:description" content="A small site mostly to play with static sites and share some thoughts and rough writing on tech, data and programming.">
 
-<link rel="canonical" href="https://tbd.netlify.app/now/">
+<link rel="canonical" href="https://asbjornbrandt.com/now/">
 
 <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter&display=swap">
