--- a/code/SiteGenerator.Tests/TestData/OldSiteOutput/notes/csharp/index.html
+++ b/code/SiteGenerator.Tests/TestData/OldSiteOutput/notes/csharp/index.html
@@ -128,8 +128,8 @@ See also: <a href="https://www.youtube.com/watch?v=-9b8NRqjUFM">https://www.yout
 <li>
 <p>Indent level of a function should not be greater than one or two (no nested structures in small functions).</p>
 </li>
-<li function="">
-<p>If statements are if(function()){function()}else</p>
+<li>
+<p>If statements are if(function()){function()}else{function()}</p>
 </li>
 <li>
 <p>Functions should at best have 0-&gt;max 3 arguments. If you pass more than 3 things that are cohesive they should probably be an object.</p>
