Use better titles

--- a/code/SiteGenerator.Tests/TestData/OldSiteOutput/notes/code-that-fits-in-your-head/index.html
+++ b/code/SiteGenerator.Tests/TestData/OldSiteOutput/notes/code-that-fits-in-your-head/index.html
@@ -33,7 +33,7 @@
 
 <meta name="description" content="A small site mostly to play with static sites and share some thoughts and rough writing on tech, data and programming.">
 
-<meta property="og:title" content="Code-that-Fits-in-Your-Head • Asbjørn Brandt's Notes">
+<meta property="og:title" content="Code that Fits in Your Head • Asbjørn Brandt's Notes">
 <meta property="og:type" content="article">
 <meta property="og:url" content="https://asbjornbrandt.com/notes/code-that-fits-in-your-head/">
 <meta property="og:image" content="/assets/chart.svg">
