--- a/code/SiteGenerator.Tests/TestData/OldSiteOutput/notes/csharp/index.html
+++ b/code/SiteGenerator.Tests/TestData/OldSiteOutput/notes/csharp/index.html
@@ -33,7 +33,7 @@
 
 <meta name="description" content="A small site mostly to play with static sites and share some thoughts and rough writing on tech, data and programming.">
 
-<meta property="og:title" content="Csharp • Asbjørn Brandt's Notes">
+<meta property="og:title" content="C# • Asbjørn Brandt's Notes">
 <meta property="og:type" content="article">
 <meta property="og:url" content="https://asbjornbrandt.com/notes/csharp/">
 <meta property="og:image" content="/assets/chart.svg">
