--- a/code/SiteGenerator.Tests/TestData/OldSiteOutput/notes/configuration-tables/index.html
+++ b/code/SiteGenerator.Tests/TestData/OldSiteOutput/notes/configuration-tables/index.html
@@ -29,7 +29,7 @@
 <link rel="manifest" href="/assets/site.webmanifest">
 <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
 
-<title>Configuration-Tables • Asbjørn Brandt's Notes</title>
+<title>Configuration Tables • Asbjørn Brandt's Notes</title>
 
 <meta name="description" content="A small site mostly to play with static sites and share some thoughts and rough writing on tech, data and programming.">
 
