--- a/site-output/notes/board-games/index.html
+++ b/site-output/notes/board-games/index.html
@@ -47,14 +47,45 @@
     <main>
         <article>
     <h1>Board games</h1>
-<h2>Worth checking</h2>
+<h2>Some current favorites</h2>
+<ul>
+<li>Space Base (Dice deck builder game)</li>
+<li>Living Forest</li>
+<li>Jump drive (a shorter Race for the Galaxy)</li>
+<li>Can't stop (push your luck dice game)</li>
+<li>Dominon</li>
+<li>Feast of Odin</li>
+</ul>
+<h2>Some other good ones</h2>
+<ul>
+<li>Kingsburg</li>
+<li>7 Wonders</li>
+<li>Terra Mystica</li>
+<li>Knar</li>
+<li>Seasons</li>
+<li>In the year of the Dragon</li>
+<li>Tigris and Euphrates</li>
+</ul>
+<h2>I'll also play</h2>
+<ul>
+<li>Chess</li>
+<li>Carcassonne</li>
+<li>Hive (abstract)</li>
+<li>Splendor</li>
+<li>Puerto Rico</li>
+<li>Ticket to Ride</li>
+<li>Azul</li>
+<li>Agricola (if I can find the time)</li>
+<li>Stone Age</li>
+<li>Wing Span</li>
+<li>Kingdomino</li>
+<li>Kingdom Builder</li>
+</ul>
+<h2>Might be worth checking</h2>
 <ul>
 <li>Klask</li>
 <li>No thanks (previously Oh S#?!)</li>
-<li>Hive --Strategy, deterministic</li>
-<li>Space base --Dice</li>
 <li>Bad company --Dice</li>
-<li>Cubitos --Dice</li>
 <li>Space alert --Tried once. Great fun. Sound bite real time, coop, survival, action queue</li>
 </ul>
 
