--- a/site-output/notes/books/index.html
+++ b/site-output/notes/books/index.html
@@ -67,7 +67,7 @@
 <ul>
 <li>Peopleware</li>
 <li>The Mythical Man Month</li>
-<li>The Unicorn Projects</li>
+<li>The Unicorn Project</li>
 </ul>
 <h3>Have read</h3>
 <ul>
@@ -78,9 +78,10 @@
 <li>Software engineering at google <a href="https://abseil.io/resources/swe-book">https://abseil.io/resources/swe-book</a></li>
 <li>Designing data-intensive applications</li>
 <li>The Phoenix Project</li>
+<li>The Software Engieer's Guidebook</li>
 </ul>
 <h2>Other non-fiction</h2>
-<h2>To read</h2>
+<h3>To read</h3>
 <ul>
 <li>Deep work</li>
 <li>The subtle art of not giving a fuck</li>
@@ -89,7 +90,7 @@
 <li>So good they can't ignore you</li>
 <li>The E-Myth revisited?</li>
 </ul>
-<h2>Have read</h2>
+<h3>Have read</h3>
 <ul>
 <li>Getting things done</li>
 <li>Digital minimalism</li>
@@ -99,6 +100,9 @@
 <ul>
 <li>The emperor of Portugallia</li>
 <li>Brandon Sanderson Steelheart series</li>
+<li>Brandon Sanderson Mistborn series + Secret History</li>
+<li>The Will of the Many by James Islington</li>
+<li>Shadow of the Gods by John Gwynne</li>
 </ul>
 
 </article>
