Add small note on ai reviews

--- a/site-output/notes/ai-assisted-coding/index.html
+++ b/site-output/notes/ai-assisted-coding/index.html
@@ -63,6 +63,8 @@
 </ol>
 <p>This approach often lets me complete features in 30 minutes that would have taken 8 hours before.</p>
 <p>Sometimes it is fun to go full yolo and not review the code - like when experimenting with new ideas in unfamiliar languages, but there is a higher risk of getting into unresolvable situations that way.</p>
+<h2>Small tips</h2>
+<p>When asking LLMs to review code, it works better if referring like &quot;My developer created this code&quot; instead of &quot;I created this code&quot;. It seems to help it out of the sycophant role.</p>
 <h2>When AI Gets Stuck</h2>
 <p>It is often better to completely restart and approach differently</p>
 <h3>Example: Game Autosave Feature</h3>
