--- a/site-output/notes/challenges/index.html
+++ b/site-output/notes/challenges/index.html
@@ -69,6 +69,7 @@ You are given the digits 1,2,3,4,5,6,7,8,9. You may add '+' and '-' operations i
     <div class="recent-section">
         <h3>🆕 Newest Notes</h3>
         <ul class="recent-notes-list">
+            <li><a href="/notes/ai-assisted-coding/" class="recent-note-link">AI-Assisted Coding</a></li>
             <li><a href="/notes/claude-code/" class="recent-note-link">Claude code</a></li>
             <li><a href="/notes/nuget/" class="recent-note-link">NuGet</a></li>
             <li><a href="/notes/wsl/" class="recent-note-link">Wsl</a></li>
@@ -81,7 +82,9 @@ You are given the digits 1,2,3,4,5,6,7,8,9. You may add '+' and '-' operations i
         <ul class="recent-notes-list">
             <li><a href="/notes/ai-assisted-coding/" class="recent-note-link">AI-Assisted Coding</a></li>
             <li><a href="/notes/books/" class="recent-note-link">Books</a></li>
-            <li><a href="/notes/claude-code/" class="recent-note-link">Claude code</a></li>
+            <li><a href="/notes/csharp/" class="recent-note-link">C#</a></li>
+            <li><a href="/notes/sql-weirdness/" class="recent-note-link">Sql weirdness</a></li>
+            <li><a href="/notes/static-sites/" class="recent-note-link">Static sites</a></li>
         </ul>
     </div>
 </aside>
