--- a/site-output/notes/home-lab/index.html
+++ b/site-output/notes/home-lab/index.html
@@ -113,6 +113,7 @@ Also check saved comments on reddit - saved some great security posts for homela
     <div class="recent-section">
         <h3>🆕 Newest Notes</h3>
         <ul class="recent-notes-list">
+            <li><a href="/notes/ai-assisted-coding/" class="recent-note-link">AI-Assisted Coding</a></li>
             <li><a href="/notes/claude-code/" class="recent-note-link">Claude code</a></li>
             <li><a href="/notes/nuget/" class="recent-note-link">NuGet</a></li>
             <li><a href="/notes/wsl/" class="recent-note-link">Wsl</a></li>
@@ -125,7 +126,9 @@ Also check saved comments on reddit - saved some great security posts for homela
         <ul class="recent-notes-list">
             <li><a href="/notes/ai-assisted-coding/" class="recent-note-link">AI-Assisted Coding</a></li>
             <li><a href="/notes/books/" class="recent-note-link">Books</a></li>
-            <li><a href="/notes/claude-code/" class="recent-note-link">Claude code</a></li>
+            <li><a href="/notes/csharp/" class="recent-note-link">C#</a></li>
+            <li><a href="/notes/sql-weirdness/" class="recent-note-link">Sql weirdness</a></li>
+            <li><a href="/notes/static-sites/" class="recent-note-link">Static sites</a></li>
         </ul>
     </div>
 </aside>
